map and add a go back button

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
+<!-- 
+    <script src="https://www.bing.com/api/maps/mapcontrol?callback=initMap" async defer></script> -->
+
   </head>
 
   <body>
